<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_barometer"
            android:icon="@drawable/ic_pressure_sensor"
            android:title="@string/menu_barometer" />

        <item
            android:id="@+id/nav_compass"
            android:icon="@drawable/ic_menu_compass"
            android:title="@string/menu_compass" />

        <item
            android:id="@+id/nav_level"
            android:icon="@drawable/ic_menu_level"
            android:title="@string/menu_level" />

        <item
            android:id="@+id/nav_speedometer"
            android:icon="@drawable/ic_menu_speedometer"
            android:title="@string/menu_speedometer" />

        <item
            android:id="@+id/nav_metal_detector"
            android:icon="@drawable/ic_menu_metal_detector"
            android:title="@string/menu_metal_detector" />

        <item
            android:id="@+id/nav_light"
            android:icon="@drawable/ic_menu_light"
            android:title="@string/menu_light" />

        <item
            android:id="@+id/nav_avoid_ohio"
            android:icon="@drawable/ic_menu_avoid_ohio"
            android:title="@string/menu_avoid_ohio" />
    </group>
</menu>